syntax = "proto3";

package websitegateway;

// wechat website with gate way
service ChatbotGateway {
    rpc ReportMessage(Message) returns (Reply);
    rpc RequestMessage(BaseInfo) returns (MessageList);//for 轮询
    rpc GetOrgId (BaseInfo) returns (BaseInfo);
}

message MessageList {
    repeated Message messageList = 1;
}

message Message {
    ChatType chatType = 1;
    MsgType msgType = 2;
    string mineNickName = 3;
    string text = 4;
    string chatNickName = 5;
    string orgId = 6;
    string unionId = 7;

    enum ChatType {
        RECEIVE = 0;
        SEND = 1;
    }
    enum MsgType {
        ALL = 0;
        TEXT = 1;
        IMAGE = 2;
        EMOTICONS = 3;
        VOICE = 4;
        VIDEO = 5;
        PERSON_CARD = 6;
        SYSTEM = 7;
        ADD_FRIEND = 8;
        REVOKE_MSG = 9;
        SHARE = 10;
        CONTACT_INIT = 11;
        UNKNOWN = 12;
    }
}

message BaseInfo {
    string mineNickName = 1;
    string orgId = 2;
    string authCode = 3;
    string unionId = 4;
}

message Reply {
    int32 error_code = 1;
    string error_message = 2;
}

